objects/Account.object
<CustomObject>
    <fields>
        <fullName>CN_Purchasing_Department_of_Contact__c</fullName>
        <label>Purchasing Department of Contact Person</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0001</fullName>
                    <label>0001-Purchasing Dept</label>
                </value>
                <value>
                    <fullName>0002</fullName>
                    <label>0002-Sales Dept</label>
                </value>
                <value>
                    <fullName>0003</fullName>
                    <label>0003-Administration Dept</label>
                </value>
                <value>
                    <fullName>0004</fullName>
                    <label>0004-Production Dept</label>
                </value>
                <value>
                    <fullName>0005</fullName>
                    <label>0005-QA Dept</label>
                </value>
                <value>
                    <fullName>0006</fullName>
                    <label>0006-Secretary&apos;s Office</label>
                </value>
                <value>
                    <fullName>0007</fullName>
                    <label>0007-Financial Dept</label>
                </value>
                <value>
                    <fullName>0008</fullName>
                    <label>0008-Legal Dept</label>
                </value>
                <value>
                    <fullName>0009</fullName>
                    <label>0009-Human Resources Dept</label>
                </value>
                <value>
                    <fullName>0010</fullName>
                    <label>0010-General Affairs Dept</label>
                </value>
                <value>
                    <fullName>0011</fullName>
                    <label>0011-Sales Promotion Dept</label>
                </value>
                <value>
                    <fullName>0012</fullName>
                    <label>0012-International Dept</label>
                </value>
                <value>
                    <fullName>0013</fullName>
                    <label>0013-Export Dept</label>
                </value>
                <value>
                    <fullName>0014</fullName>
                    <label>0014-Import Dept</label>
                </value>
                <value>
                    <fullName>0015</fullName>
                    <label>0015-Public Relation Dept</label>
                </value>
                <value>
                    <fullName>0016</fullName>
                    <label>0016-Advertising Dept</label>
                </value>
                <value>
                    <fullName>0017</fullName>
                    <label>0017-Planning Dept</label>
                </value>
                <value>
                    <fullName>0018</fullName>
                    <label>0018-R&amp;D Dept</label>
                </value>
                <value>
                    <fullName>0019</fullName>
                    <label>0019-Product Dev. Dept</label>
                </value>
                <value>
                    <fullName>0020</fullName>
                    <label>0020-Food &amp; Beverage Dept</label>
                </value>
                <value>
                    <fullName>0021</fullName>
                    <label>0021-Service Dept</label>
                </value>
                <value>
                    <fullName>0022</fullName>
                    <label>0022-Technical Support</label>
                </value>
                <value>
                    <fullName>0023</fullName>
                    <label>0023-IT Dept</label>
                </value>
                <value>
                    <fullName>0024</fullName>
                    <label>0024-Logistics Dept</label>
                </value>
                <value>
                    <fullName>0025</fullName>
                    <label>0025-Cold Kitchen</label>
                </value>
                <value>
                    <fullName>0026</fullName>
                    <label>0026-Hot Kitchen</label>
                </value>
                <value>
                    <fullName>0027</fullName>
                    <label>0027-Banquet Kitchen</label>
                </value>
                <value>
                    <fullName>0028</fullName>
                    <label>0028-Pastry</label>
                </value>
                <value>
                    <fullName>0029</fullName>
                    <label>0029-Backery</label>
                </value>
                <value>
                    <fullName>0030</fullName>
                    <label>0030-Bar</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Purchasing_Email__c</fullName>
        <label>Purchasing Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CN_Purchasing_Mobile_Phone__c</fullName>
        <inlineHelpText>Please enter the number in the format of 1XXXXXXXXXX or XXX-XXXXXXXX (X is number).</inlineHelpText>
        <label>Purchasing Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CN_Purchasing_Phone_Number__c</fullName>
        <inlineHelpText>Please enter the number in the format of 1XXXXXXXXXX or XXX-XXXXXXXX (X is number).</inlineHelpText>
        <label>Purchasing Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CN_Rebat__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Rebat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Reconciliation_Account__c</fullName>
        <label>Reconciliation Account</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>11410101</fullName>
                    <default>true</default>
                    <label>11410101-Account Receivable - domestic</label>
                </value>
                <value>
                    <fullName>11410103</fullName>
                    <label>11410103-Account Receivable - domestic - Legal Cases</label>
                </value>
                <value>
                    <fullName>11410104</fullName>
                    <label>11410104-Account Receivable - domestic - Dispute/Deduction</label>
                </value>
                <value>
                    <fullName>11410201</fullName>
                    <label>11410201-Accounts Receivable - foreign</label>
                </value>
                <value>
                    <fullName>11910000</fullName>
                    <label>11910000-Other Accounts Receivable domestic</label>
                </value>
                <value>
                    <fullName>11910001</fullName>
                    <label>11910001-Other Accounts Receivable Custom duties</label>
                </value>
                <value>
                    <fullName>11910010</fullName>
                    <label>11910010-Other Accounts Receivable - Inter Company</label>
                </value>
                <value>
                    <fullName>11910020</fullName>
                    <label>11910020-Other Accounts Receivable - Foreign suppliers (3rd</label>
                </value>
                <value>
                    <fullName>11910040</fullName>
                    <label>11910040-Other Accounts Receivable - Security deposit</label>
                </value>
                <value>
                    <fullName>11910050</fullName>
                    <label>11910050-Other Accounts Receivable Others</label>
                </value>
                <value>
                    <fullName>11910085</fullName>
                    <label>11910085-Other Receivable - MSH Pension Fund Balance</label>
                </value>
                <value>
                    <fullName>21610101</fullName>
                    <label>21610101-Advances from Customer   domestic</label>
                </value>
                <value>
                    <fullName>21610102</fullName>
                    <label>21610102-Security deposit given to Customers</label>
                </value>
                <value>
                    <fullName>21610103</fullName>
                    <label>21610103-Advances from Customer   domestic(Credit balance)</label>
                </value>
                <value>
                    <fullName>21610201</fullName>
                    <label>21610201-Advances from Customer   foreign</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Reference_Day__c</fullName>
        <label>Reference Day</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Delivery_Day</fullName>
                    <label>Delivery Day</label>
                </value>
                <value>
                    <fullName>Fapiao_Day</fullName>
                    <label>Fapiao Day</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Require_Bank_Information_FaPiao__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Require Bank Information/FaPiao</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Require_Business_License__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Require Business License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Require_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Require Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Require_Hygiene_Certificate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Require Hygiene Certificate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Risk_Category__c</fullName>
        <label>Risk Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Route_To_Market__c</fullName>
        <formula>IF(
    CONTAINS(RecordType.DeveloperName, &quot;_Indirect&quot;),
    &quot;Indirect&quot;,
    IF(
        CONTAINS(RecordType.DeveloperName, &quot;_Direct&quot;),
        &quot;Direct&quot;,
        IF(
            CONTAINS(RecordType.DeveloperName, &quot;_Prospect&quot;),
            &quot;Prospect&quot;,
            &quot;&quot;
        )
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Route-to-Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_SF_Customer_Code__c</fullName>
        <displayFormat>ACC-{0000000000}</displayFormat>
        <label>SF Customer Code</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>CN_Sales_District__c</fullName>
        <label>Sales District</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>020</fullName>
                    <label>020-Out of ShangHai</label>
                </value>
                <value>
                    <fullName>001</fullName>
                    <label>001-SH-HuangPu</label>
                </value>
                <value>
                    <fullName>002</fullName>
                    <label>002-SH-LuWan</label>
                </value>
                <value>
                    <fullName>003</fullName>
                    <label>003-SH-XuHui</label>
                </value>
                <value>
                    <fullName>004</fullName>
                    <label>004-SH-ChangNing</label>
                </value>
                <value>
                    <fullName>005</fullName>
                    <label>005-SH-JingAn</label>
                </value>
                <value>
                    <fullName>006</fullName>
                    <label>006-SH-PuTuo</label>
                </value>
                <value>
                    <fullName>007</fullName>
                    <label>007-SH-ZhaBei</label>
                </value>
                <value>
                    <fullName>008</fullName>
                    <label>008-SH-HongKou</label>
                </value>
                <value>
                    <fullName>009</fullName>
                    <label>009-SH-YangPu</label>
                </value>
                <value>
                    <fullName>010</fullName>
                    <label>010-SH-MingHang</label>
                </value>
                <value>
                    <fullName>011</fullName>
                    <label>011-SH-BaoShan</label>
                </value>
                <value>
                    <fullName>012</fullName>
                    <label>012-SH-JiaDing</label>
                </value>
                <value>
                    <fullName>013</fullName>
                    <label>013-SH-PuDong new Distr</label>
                </value>
                <value>
                    <fullName>014</fullName>
                    <label>014-SH-JinShan</label>
                </value>
                <value>
                    <fullName>015</fullName>
                    <label>015-SH-SongJiang</label>
                </value>
                <value>
                    <fullName>016</fullName>
                    <label>016-SH-QingPu</label>
                </value>
                <value>
                    <fullName>017</fullName>
                    <label>017-SH-NanHui</label>
                </value>
                <value>
                    <fullName>018</fullName>
                    <label>018-SH-FengXian</label>
                </value>
                <value>
                    <fullName>019</fullName>
                    <label>019-SH-CongMing</label>
                </value>
                <value>
                    <fullName>021</fullName>
                    <label>021-HangZhou</label>
                </value>
                <value>
                    <fullName>022</fullName>
                    <label>022-SuZhou</label>
                </value>
                <value>
                    <fullName>023</fullName>
                    <label>023-Nanjing</label>
                </value>
                <value>
                    <fullName>024</fullName>
                    <label>024-BeiJing</label>
                </value>
                <value>
                    <fullName>025</fullName>
                    <label>025-ShenZhen</label>
                </value>
                <value>
                    <fullName>026</fullName>
                    <label>026-GuangZhou</label>
                </value>
                <value>
                    <fullName>B01</fullName>
                    <isActive>false</isActive>
                    <label>B01-North Area</label>
                </value>
                <value>
                    <fullName>B02</fullName>
                    <isActive>false</isActive>
                    <label>B02-East Area</label>
                </value>
                <value>
                    <fullName>B03</fullName>
                    <isActive>false</isActive>
                    <label>B03-South Area</label>
                </value>
                <value>
                    <fullName>B04</fullName>
                    <isActive>false</isActive>
                    <label>B04-e-commerce</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Sales_Group__c</fullName>
        <label>Sales Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>002</fullName>
                    <default>true</default>
                    <label>002-Food Service</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Sales_Office__c</fullName>
        <label>Sales Office</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>K010</fullName>
                    <label>K010-ShangHai</label>
                </value>
                <value>
                    <fullName>K020</fullName>
                    <label>K020-BeiJing</label>
                </value>
                <value>
                    <fullName>K030</fullName>
                    <label>K030-ShenZhen</label>
                </value>
                <value>
                    <fullName>K040</fullName>
                    <label>K040-GuangZhou</label>
                </value>
                <value>
                    <fullName>K050</fullName>
                    <label>K050-ChengDu</label>
                </value>
                <value>
                    <fullName>K060</fullName>
                    <isActive>false</isActive>
                    <label>K060-DaLian</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Sales_Org__c</fullName>
        <label>Sales Org</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>S010</fullName>
                    <default>true</default>
                    <label>S010-Sinodis Sales Org</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Sales_Person_Email__c</fullName>
        <label>Sales Person Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CN_Sales_Person_Name_API__c</fullName>
        <formula>CN_Sales_Person_Name__r.CN_Personnel_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Person Name API</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Sales_Person_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Person Name</label>
        <referenceTo>CN_Internal_Employee__c</referenceTo>
        <relationshipLabel>Accounts (Sales Person Name)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Sales_Person_SalesTeam_Code__c</fullName>
        <formula>Owner.CN_Sales_Team__c</formula>
        <label>Sales Person SalesTeam Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Sales_Team_Name__c</fullName>
        <formula>CN_Sales_Team_UI__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Team Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Sales_Team_UI__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Please search for KA/DS/WS.</inlineHelpText>
        <label>Sales Team</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>2 OR (1 AND 3)</booleanFilter>
            <filterItems>
                <field>$Source.CN_Business_Unit_UI__c</field>
                <operation>equals</operation>
                <valueField>CN_Sales_Team__c.CN_Business_Unit__c</valueField>
            </filterItems>
            <filterItems>
                <field>$User.CN_Is_Integration_User__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>CN_Sales_Team__c.CN_Is_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>CN_Sales_Team__c</referenceTo>
        <relationshipLabel>SalesTeams</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Sales_Team__c</fullName>
        <formula>CN_Sales_Team_UI__r.CN_Sales_Team_Code__c</formula>
        <label>Sales Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Sent_Reminder_Level__c</fullName>
        <description>The Sent Reminder Level of the Related Payment Report</description>
        <label>Sent Reminder Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Ship_To_Party_Change_Request_Id__c</fullName>
        <label>Ship To Party Change Request Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Shipping_Contact_Name__c</fullName>
        <label>Shipping Contact Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Shipping_Mobile_Phone__c</fullName>
        <inlineHelpText>Please enter the number in the format of 1XXXXXXXXXX or XXX-XXXXXXXX (X is number).</inlineHelpText>
        <label>Shipping Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CN_Shipping_Telephone__c</fullName>
        <inlineHelpText>Please enter the number in the format of 1XXXXXXXXXX or XXX-XXXXXXXX (X is number).</inlineHelpText>
        <label>Shipping Telephone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CN_Sinodis_Finance_AR_API__c</fullName>
        <formula>CN_Sinodis_Finance_AR__r.CN_Personnel_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sinodis Finance AR API</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Sinodis_Finance_AR_Name__c</fullName>
        <formula>CN_Sinodis_Finance_AR__r.Name</formula>
        <label>Sinodis Finance AR Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Sinodis_Finance_AR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sinodis Finance AR</label>
        <referenceTo>CN_Internal_Employee__c</referenceTo>
        <relationshipLabel>Accounts (Sinodis Finance AR)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Sort_Key__c</fullName>
        <defaultValue>&quot;001-Posting date&quot;</defaultValue>
        <label>Sort key</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>000</fullName>
                    <label>000-Allocation number</label>
                </value>
                <value>
                    <fullName>001</fullName>
                    <default>true</default>
                    <label>001-Posting date</label>
                </value>
                <value>
                    <fullName>002</fullName>
                    <label>002-Doc.no., fiscal year</label>
                </value>
                <value>
                    <fullName>003</fullName>
                    <label>003-Document date</label>
                </value>
                <value>
                    <fullName>004</fullName>
                    <label>004-Branch account</label>
                </value>
                <value>
                    <fullName>005</fullName>
                    <label>005-Loc.currency amount</label>
                </value>
                <value>
                    <fullName>006</fullName>
                    <label>006-Doc.currency amount</label>
                </value>
                <value>
                    <fullName>007</fullName>
                    <label>007-Bill/exch.due date</label>
                </value>
                <value>
                    <fullName>008</fullName>
                    <label>008-Cost center</label>
                </value>
                <value>
                    <fullName>009</fullName>
                    <label>009-External doc.number</label>
                </value>
                <value>
                    <fullName>010</fullName>
                    <label>010-Purchase order no.</label>
                </value>
                <value>
                    <fullName>011</fullName>
                    <label>011-Plant number</label>
                </value>
                <value>
                    <fullName>012</fullName>
                    <label>012-Vendor number</label>
                </value>
                <value>
                    <fullName>014</fullName>
                    <label>014-Purchase order</label>
                </value>
                <value>
                    <fullName>015</fullName>
                    <label>015-Personnel number</label>
                </value>
                <value>
                    <fullName>016</fullName>
                    <label>016-Settlement period</label>
                </value>
                <value>
                    <fullName>017</fullName>
                    <label>017-Settl.per., pers.no.</label>
                </value>
                <value>
                    <fullName>018</fullName>
                    <label>018-Asset number</label>
                </value>
                <value>
                    <fullName>021</fullName>
                    <label>021-Segment text</label>
                </value>
                <value>
                    <fullName>022</fullName>
                    <label>022-One-time name / city</label>
                </value>
                <value>
                    <fullName>023</fullName>
                    <label>023-One-time city / name</label>
                </value>
                <value>
                    <fullName>024</fullName>
                    <label>024-Document header text</label>
                </value>
                <value>
                    <fullName>025</fullName>
                    <label>025-CPU date</label>
                </value>
                <value>
                    <fullName>026</fullName>
                    <label>026-Pmnt per.bslne date</label>
                </value>
                <value>
                    <fullName>027</fullName>
                    <label>027-Value date</label>
                </value>
                <value>
                    <fullName>028</fullName>
                    <label>028-Asset number</label>
                </value>
                <value>
                    <fullName>029</fullName>
                    <label>029-Pstng month, vendor</label>
                </value>
                <value>
                    <fullName>031</fullName>
                    <label>031-Customer number</label>
                </value>
                <value>
                    <fullName>032</fullName>
                    <label>032-Pstng yr,month,curr.</label>
                </value>
                <value>
                    <fullName>033</fullName>
                    <label>033-Cost center</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Store_Name_CN__c</fullName>
        <label>Commercial Name (CN)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Store_Name_EN__c</fullName>
        <label>Commercial Name (EN)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Subcategory__c</fullName>
        <label>Subcategory</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CN_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Access Bakery</fullName>
                </value>
                <value>
                    <fullName>Access Pastry</fullName>
                </value>
                <value>
                    <fullName>Access Ice cream</fullName>
                </value>
                <value>
                    <fullName>Core Bakery</fullName>
                </value>
                <value>
                    <fullName>Core Pastry</fullName>
                </value>
                <value>
                    <fullName>Core Ice cream</fullName>
                </value>
                <value>
                    <fullName>Premium Bakery</fullName>
                </value>
                <value>
                    <fullName>Premium Pastry</fullName>
                </value>
                <value>
                    <fullName>Premium Ice cream</fullName>
                </value>
                <value>
                    <fullName>Casual Dining - Western</fullName>
                </value>
                <value>
                    <fullName>Casual Dining - Asian excl CH</fullName>
                </value>
                <value>
                    <fullName>Casual Dining - Chinese</fullName>
                </value>
                <value>
                    <fullName>Fine Dining - Western</fullName>
                </value>
                <value>
                    <fullName>Fine Dining - Asian excl CH</fullName>
                </value>
                <value>
                    <fullName>Fine Dining - Chinese</fullName>
                </value>
                <value>
                    <fullName>Central Kitchen</fullName>
                </value>
                <value>
                    <fullName>Airline</fullName>
                </value>
                <value>
                    <fullName>Cruise</fullName>
                </value>
                <value>
                    <fullName>Corporate Sales</fullName>
                </value>
                <value>
                    <fullName>Hospital</fullName>
                </value>
                <value>
                    <fullName>School</fullName>
                </value>
                <value>
                    <fullName>Entertainment</fullName>
                </value>
                <value>
                    <fullName>Access Coffee Shop</fullName>
                </value>
                <value>
                    <fullName>Access Tea Shop</fullName>
                </value>
                <value>
                    <fullName>Core Coffee Shop</fullName>
                </value>
                <value>
                    <fullName>Core Tea Shop</fullName>
                </value>
                <value>
                    <fullName>Premium Coffee Shop</fullName>
                </value>
                <value>
                    <fullName>Premium Tea Shop</fullName>
                </value>
                <value>
                    <fullName>BAPA OEM</fullName>
                </value>
                <value>
                    <fullName>HORECA OEM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Sync_Error_Message__c</fullName>
        <label>Sync Error Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CN_Sync_Status__c</fullName>
        <label>Sync Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Sync_Time__c</fullName>
        <label>Sync Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CN_Synchronized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Synchronized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_TM_Remove_Date__c</fullName>
        <label>TM Remove Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_Tax_Classification__c</fullName>
        <defaultValue>&quot;1&quot;</defaultValue>
        <label>Tax classification</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Tax_Registration_No__c</fullName>
        <label>Tax Registration No.</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Terms_of_Payment_in_Billing__c</fullName>
        <formula>TEXT(CN_Payment_Terms__c )</formula>
        <label>Terms of Payment in Billing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_The_Number_Of_Seats__c</fullName>
        <label>The number of Seats</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CN_Upload_Bank_Information_FaPiao_No__c</fullName>
        <label>Upload Bank Information/FaPiao No.</label>
        <summaryFilterItems>
            <field>CN_Document__c.CN_Document_Type__c</field>
            <operation>equals</operation>
            <value>Fapiao Information</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CN_Document__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>CN Document</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CN_Document__c.CN_Is_File_Upload__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>CN_Document__c.CN_Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CN_Upload_Bank_Information_FaPiao__c</fullName>
        <formula>IF(CN_Upload_Bank_Information_FaPiao_No__c &gt; 0, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Upload Bank Information/FaPiao</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>